add total user count
