# code/backend/docs/swagger.json
@@ -355,6 +355,29 @@
                 }
             }
         },
+        "/games/count": {
+            "get": {
+                "description": "Get the total number of games played",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "monitoring"
+                ],
+                "summary": "Games played count",
+                "responses": {
+                    "200": {
+                        "description": "Games played count",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "description": "Confirm the server is running",
@@ -372,6 +395,29 @@
                             "type": "object",
                             "additionalProperties": {
                                 "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/count": {
+            "get": {
+                "description": "Get the total number of users",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "monitoring"
+                ],
+                "summary": "User count",
+                "responses": {
+                    "200": {
+                        "description": "User count",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "integer"
                             }
                         }
                     }
